corrected spacing on home price data

--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -16,5 +16,6 @@ table {
 
 #avocadoCost {
 	color: #568520 !important;
+	font-size: 50px;
 }
 
